--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -15,6 +15,7 @@ WORKDIR $APP_HOME
 # install
 COPY . $APP_HOME
 RUN pip install -r requirements-dev.txt
+RUN pip install -r requirements.txt
 RUN pip install -e .
 
 RUN chown -R app:app $APP_HOME
